--- a/src/index.css
+++ b/src/index.css
@@ -11,3 +11,98 @@ code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
 }
+
+.threedots {
+  display: inline-block;
+  width: 200px;
+  white-space: nowrap;
+  overflow: hidden !important;
+  text-overflow: ellipsis;
+  color: blue;
+}
+
+.info-card {
+  width: 500px;
+  word-wrap: break-word;
+  padding: 20px;
+  /* border: 1px solid; */
+  border-radius: 20px;
+  box-shadow: 10px 10px 10px #eee;
+
+}
+.card-wallet{
+  font-weight: bold;
+  color: white;
+  font-size: 20px;
+}
+.wallet-address {
+  color: white;
+  font-size: 13px;
+}
+
+.balance {
+  font-size: 30px;
+  text-align: center;
+  color:  white;
+}
+
+.send-form {
+  text-align: center;
+  font-size: 15px;
+  color:  white;
+}
+
+.send-form input {
+  width: 300px;
+  height: 26px;
+  padding: 4px;
+  margin: 4px;
+}
+
+.send-form button {
+  width: 100px;
+  height: 40px;
+  background:  #05c0a5;
+  border: none;
+  color: white;
+  border-radius: 2px;
+}
+
+.block {
+  width: 200px;
+  word-wrap: break-word;
+  padding: 20px;
+  /* border: 1px solid; */
+  border-radius: 20px;
+  box-shadow: 10px 10px 10px #eee;
+}
+
+button {
+  width: 100px;
+  height: 40px;
+  background:  #05c0a5;
+  border: none;
+  color: white;
+  margin-top: 20px;
+  border-radius: 2px;
+}
+.ellipsis {
+  position: relative;
+}
+.ellipsis:before {
+  content: '&nbsp;';
+  visibility: hidden;
+}
+.ellipsis span {
+  position: absolute;
+  left: 0;
+  right: 0;
+  white-space: nowrap;
+  overflow: hidden;
+  text-overflow: ellipsis;
+}
+
+table, th {
+  border: 1px solid black;
+  border-collapse: collapse;
+}
